[gd_scene load_steps=4 format=3 uid="uid://b1abhynprhr0v"]

[ext_resource type="Script" path="res://scenes/UI/game-over/game_over.gd" id="1_qr0kv"]
[ext_resource type="FontFile" uid="uid://mt7aq4jq2jsf" path="res://assets/fonts/NotJamFontPack/Not Jam Blackletter 13/NotJamBlackletter13.ttf" id="1_u66f2"]
[ext_resource type="FontFile" uid="uid://xfinsrs3axfv" path="res://assets/fonts/NotJamFontPack/Not Jam Signature 17/Not Jam Signature 21.ttf" id="3_7kf4p"]

[node name="GameOver" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qr0kv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 80

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.945098, 0.890196, 0.827451, 1)
theme_override_fonts/font = ExtResource("1_u66f2")
theme_override_font_sizes/font_size = 65
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="MarginContainer/Panel/MarginContainer"]
custom_minimum_size = Vector2(320, 480)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ItemsCollectedLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 95)
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.945098, 0.890196, 0.827451, 1)
theme_override_fonts/font = ExtResource("3_7kf4p")
theme_override_font_sizes/font_size = 42
text = "00 items collected"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="TotalTimeLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 95)
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.945098, 0.890196, 0.827451, 1)
theme_override_fonts/font = ExtResource("3_7kf4p")
theme_override_font_sizes/font_size = 42
text = "00 seconds spent in the storm"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="PlayAgainButton" type="Button" parent="MarginContainer/Panel/MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0.945098, 0.890196, 0.827451, 1)
theme_override_colors/font_hover_pressed_color = Color(0.945098, 0.890196, 0.827451, 1)
theme_override_colors/font_hover_color = Color(0.945098, 0.890196, 0.827451, 1)
theme_override_colors/font_pressed_color = Color(0.945098, 0.890196, 0.827451, 1)
theme_override_colors/font_focus_color = Color(0.945098, 0.890196, 0.827451, 1)
theme_override_colors/font_color = Color(0.945098, 0.890196, 0.827451, 1)
theme_override_fonts/font = ExtResource("3_7kf4p")
theme_override_font_sizes/font_size = 42
text = "Play Again"

[node name="QuitButton" type="Button" parent="MarginContainer/Panel/MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0.945098, 0.890196, 0.827451, 1)
theme_override_colors/font_hover_pressed_color = Color(0.945098, 0.890196, 0.827451, 1)
theme_override_colors/font_hover_color = Color(0.945098, 0.890196, 0.827451, 1)
theme_override_colors/font_pressed_color = Color(0.945098, 0.890196, 0.827451, 1)
theme_override_colors/font_focus_color = Color(0.945098, 0.890196, 0.827451, 1)
theme_override_colors/font_color = Color(0.945098, 0.890196, 0.827451, 1)
theme_override_fonts/font = ExtResource("3_7kf4p")
theme_override_font_sizes/font_size = 42
text = "Quit to Desktop"

[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/Panel/MarginContainer/VBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/Panel/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
